Improving benchmark Adding new logback configuration to store logs in disk